objects/RIC_Brand__c.object
<CustomObject>
    <description>RIC Plann&apos;R - Workflow OPP &amp; Produits finis
Table de référence JDE 41_S4</description>
    <fields>
        <fullName>RIC_Acheteurs_OPP__c</fullName>
        <description>List of emails separated by &apos;;&apos; each.</description>
        <inlineHelpText>Email des Acheteurs OPP séparés par &apos;;&apos;</inlineHelpText>
        <label>Acheteurs OPP</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Code_Marque__c</fullName>
        <description>Utilisé comme préfixe des codes de Projets</description>
        <externalId>true</externalId>
        <label>Code Marque</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Prefixe__c</fullName>
        <label>Préfixe projet</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RIC Marque</label>
    <listViews>
        <fullName>RIC_All</fullName>
        <columns>RIC_Code_Marque__c</columns>
        <columns>RIC_Prefixe__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Marque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIC Marques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>